# vision-foundry

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
apps/say_hello/: CMakeLists.txt  say_hello.cpp
cmake/: utils.cmake
cpp/: CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  vcpkg.json
cpp/apps/add/: CMakeLists.txt  add.cpp
cpp/docs/: Doxyfile.in
cpp/include/cuda_utils/: cuda_utils.h
cpp/include/utils/: utils.h
cpp/src/bindings/: CMakeLists.txt  bindings.cpp
cpp/src/bindings/vision_foundry/: __init__.py
cpp/src/cuda_utils/: CMakeLists.txt  cuda_utils.cu
cpp/src/utils/: CMakeLists.txt  utils.cpp
cpp/src/vision_foundry_core/: CMakeLists.txt  __init__.py  data.cpp
cpp/tests/cuda_utils/: CMakeLists.txt  test_cuda_utils.cpp
cpp/tests/data/: test_data.cpp
cpp/tests/utils/: CMakeLists.txt  test_utils.cpp
docs/: Doxyfile.in
include/data/: data.hpp
python/: README.md  pyproject.toml
src/: CMakeLists.txt  vision-foundry.cpp  vision-foundry.h
src/hello/: CMakeLists.txt  hello.cpp
tests/cpp/: CMakeLists.txt
tests/cpp/data/: CMakeLists.txt  test_data.cpp
tests/cpp/test_hello/: CMakeLists.txt  test_hello.cpp
unreal-engine/: README.md
web/: README.md
